updated desktop version
- finished the footer for the desktop view
- various other small changes

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
                             <a class="footer__nav-item-link" href="#">Jobs</a>
                         </li>
                     </ul>
-    
+                </nav>
+                
+                <nav class="footer__nav">
                     <ul class="footer__nav-items-2">
                         <li class="footer__nav-item">
                             <a class="footer__nav-item-link" href="#">Contact Us</a>
